--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@
   font-family: "Roboto", sans-serif;
 }
 
+a {
+    text-decoration: none;
+    color: #f9faf8;;
+}
+
 /* Header class */
 .menu-container {
   background-color: #1f2937;
